FeatureAdmin 2010 ChangeLog
  - this file is intended for developers

** Apr, 2015 -- Perry
Populate main title version numbers dynamically

** Nov, 2014 - Perry
New "Find All Activations" and "Load All Activation Data" buttons

** Feb 24th 2013 - RELEASE v 2.3: "FeatureAdmin for SharePoint 2010 - v2.3" **

** Feb 24th 2013 - Achim
Updated error text for access denied on level SPWeb to recommend also full control via web application user policy
changed window title of feature admin to be the same for 2007, 2010 and 2013 version
changed assembly name to contain the year name

** Feb, 2013 - Perry
Trapped & logged Access Denied exceptions in Find Faulty Feature (so it doesn't crash)
Fix Find Activated Feature to correctly find web application scoped features
Factored code to find activated features into new ActivationFinder class
Record & log exception messages when FeatureManager enumerates exceptions

** Aug, 2015 - Perry
Display more info in the faulty feature removal prompt. Add activation time, 
and solution info (if available). Remove unpopulated compatibility level.
Fix faulty feature finder to continue, and allow skipping

** Aug 27, 2013 - RELEASE v 2.3: "FeatureAdmin for SharePoint 2010 - v2.4" **